--- a/src/pages/controlar-ponto-de-partida/controlar-ponto-de-partida.html
+++ b/src/pages/controlar-ponto-de-partida/controlar-ponto-de-partida.html
@@ -9,8 +9,8 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
-    <input id="pac-input" class="controls" type="text" placeholder="Buscar Endereço">
-  <div #map id="map" style="width: 100%;height:100%"></div>
+    <!--input id="pac-input" class="controls" type="text" placeholder="Buscar Endereço"-->
+  <div #map id="map" style="width: 100%;height:90%"></div>
   <button id="controlarPontoDePartida-button4" ion-button color="balanced" block>
     <ion-icon name="locate"></ion-icon>
     Salvar possicao
